fix | z-index nav & estilos portada estudio

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,6 +35,7 @@ h1{
 
 .fondoBeige{
     background: #E7D3B1;
+    z-index: 1;
 }
 
 .fondoGris{
@@ -94,10 +95,6 @@ h1{
     animation-duration:6s;
 }
 
-.boxShad{
-    box-shadow: 0px 20px 50px #0000003f;
-    z-index: 1;
-}
 .textShad{
     text-shadow: 0px 2px 10px #00000033;
 }
@@ -225,8 +222,12 @@ footer a:hover{
 /* ------------------- Estilos estudio.html ------------------- */
 
 /* ----- portada de estudio.html ----- */
-
-.gridEstudio{
+.portadaEstudio{
+    background-image: url("../img/estudio.png");
+    background-size: cover;
+    height:600px;
+}
+/* .gridEstudio{
     display: grid;
     height:100%;
     grid-template-columns: 8% 42% 42% 8%;
@@ -265,11 +266,11 @@ footer a:hover{
     text-shadow: 10px 15px 10px #00000033;
     animation: fadeInRight;
     animation-duration:2s;
-}
+} */
 
 /* ----- cuerpo de estudio.html ----- */
 
-.lenguajes{
+/* .lenguajes{
     grid-column: 1/5;
     grid-row: 2/3;
     background: #E7D3B1; 
@@ -429,7 +430,7 @@ footer a:hover{
     grid-column: 1/5;
     grid-row: 8/9;
     padding:1% 0;
-}
+} */
 
 /* ------------------- Estilos contacto.html ------------------- */
 
